syntax = "proto3";

service TaskReporter {
    rpc report (Task) returns (Reply) {};
}

message Task {
    int32 id = 1;
    TaskStatus taskStatus = 2 [default = RUNNING];

    enum TaskStatus {
        RUNNING = 0;
        FAILED = 1;
        TIMEOUT = 2;
    }
}

message Reply {
    string message = 1;
}
